--- a/SuperMarket/nbproject/project.properties
+++ b/SuperMarket/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/SuperMarket.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.iText-5.0.5.jar=iText-5.0.5.jar
 file.reference.mail.jar=mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.iText-5.0.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
